	- Inter-process communication (IPC) via console redirection
	  on all existing platforms. Primitive terminal emulation.
	- qword support
	- new streamfiles: ht_sys_file, ht_stdio_file, ht_temp_file,
	  ht_null_file
	- some memory leaks killed (Valgrind sessions)
	- log-window scrolling fixed
	- virtual file system (VFS) rewritten, VFS viewer rewritten
	- many bugs fixed

     * FIXED: x86_insn_op::user is int[4] but misused as void*[4] in vxd disasm,
       this wont work on alpha and other 64bit architectures

	* docu LE updates
	* argh: file/new and file/save fixes
	* POSIX sys_truncate

	* further Valgrinding
	* help hang bug fixed
	* Resize problems fixed

	* FIXED: htanaly: nicht gut: 'c' geht nicht in edit-mode
	* LE * fixes

	* FIXED: texteditor: ctrl-y doenst work at all in 'edit comments' (analyser)
	  (because this is handled via local menu)
	* goto('') should be ignored
	* htapp.cc: experimental code disabled
	* FIXED: (HT_0_7) has SYSTEM CONFIG FILE changed ?? NO.
	* FIXED: (HT_0_7) update FILE CONFIG FILE VERSION

	* open info file fixed
	* ht_hex_sub::last_line_id(...) fixed
	* LE host_struct's created

	* UI file/execute for new sys_ipc_* functions
	* htsys: new function sys_get_caps(), changed if to sys_ipc_exec(...)

	* htpeimg.cc: "section(ANY)"
	* infoview copes with CRLF
	* ht_memmap_file and databuf_* secured
	* eval()-function help in goto
	* texteditor/viewer speed ups (!)

	* LE: header flags
	* eval: varparam, single type-variable param
	* eval: typeof(), is_int(), is_string(), is_float() implemented

	* FIXED: textedit.cc:2498 unneccesarry compare (temp)

	* FIXED: texteditor: ctrl-y (delete line) doesnt work on last line

	* F4/view mode - ask before forgetting changes
	* some project tweaks (ask before create, close before open)
	* disasm/x86 (assemble, ctrl-a) should prefill opcode from cursor
	(like in analyser modes)

	* file->open project->some_new_project does create some_new_project.htprj (auto add extension)