@@ -1138,7 +1138,6 @@ void ht_aviewer::handlemsg(htmsg *msg)
 					return;
 				}
 				case 'c':
-//					if (!edit()) {
 					if (cursor_tag_class == tag_class_sel) {
 						sendmsg(cmd_analyser_continue);
 						clearmsg(msg);
@@ -1150,7 +1149,6 @@ void ht_aviewer::handlemsg(htmsg *msg)
 					clearmsg(msg);
 					return;
 				case 'F':
-//					if (!edit()) {
 					if (cursor_tag_class == tag_class_sel) {
 						sendmsg(cmd_analyser_follow_ex);
 						clearmsg(msg);
@@ -1158,7 +1156,6 @@ void ht_aviewer::handlemsg(htmsg *msg)
 					}
 					break;
 				case 'f':
-//					if (!edit()) {
 					if (cursor_tag_class == tag_class_sel) {
 						sendmsg(cmd_analyser_follow);
 						clearmsg(msg);
