@@ -209,16 +209,16 @@ struct LE_ENTRYPOINT32 {
  *	FIXUPS
  */
 
-#define   LE_FIXUP_ADDR_TYPE_MASK		(15<<0)
-#define		LE_FIXUP_ADDR_TYPE_0_8		0
-#define		LE_FIXUP_ADDR_TYPE_16_0		2
-#define		LE_FIXUP_ADDR_TYPE_16_16		3
-#define		LE_FIXUP_ADDR_TYPE_0_16		5
-#define		LE_FIXUP_ADDR_TYPE_16_32		6
-#define		LE_FIXUP_ADDR_TYPE_0_32		7
-#define		LE_FIXUP_ADDR_TYPE_REL32		8
-#define   LE_FIXUP_ADDR_16_16			(1<<4)
-#define   LE_FIXUP_ADDR_MULTIPLE		(1<<5)
+#define LE_FIXUP_ADDR_TYPE_MASK		(15<<0)
+#define LE_FIXUP_ADDR_TYPE_0_8		0
+#define LE_FIXUP_ADDR_TYPE_16_0		2
+#define LE_FIXUP_ADDR_TYPE_16_16		3
+#define LE_FIXUP_ADDR_TYPE_0_16		5
+#define LE_FIXUP_ADDR_TYPE_16_32		6
+#define LE_FIXUP_ADDR_TYPE_0_32		7
+#define LE_FIXUP_ADDR_TYPE_REL32		8
+#define LE_FIXUP_ADDR_16_16			(1<<4)
+#define LE_FIXUP_ADDR_MULTIPLE		(1<<5)
 
 #define   LE_FIXUP_RELOC_TYPE_MASK		(3<<0)
 #define        LE_FIXUP_RELOC_TYPE_INTERNAL		0
