@@ -31,8 +31,9 @@ version 0.7.0:
 	- virtual file system (VFS) rewritten, VFS viewer rewritten
 	- many bugs fixed
 
-     * FIXED: x86_insn_op::user is int[4] but misused as void*[4] in vxd disasm,
-       this wont work on alpha and other 64bit architectures
+	* tree::balance() works now if compare_keys changes and is much faster
+	* FIXED: x86_insn_op::user is int[4] but misused as void*[4] in vxd disasm,
+	this wont work on alpha and other 64bit architectures
 
 	* docu LE updates
 	* argh: file/new and file/save fixes
